# newsreader

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: workflow.yaml
newsreader/: config.py  container.py  db.py  main.py
newsreader/api/: routers.py
newsreader/core/: domain.py  repository.py  service.py
newsreader/infrastructure/: repository.py  service.py
